Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13988

mdt_lock_handle_fini()) ASSERTION( !lustre_handle_is_used(&lh->mlh_reg_lh) ) failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • None
    • None
    • 3
    • 9223372036854775807

      00000100:00100000:1.0:1586690876.387325:0:13960:0:(service.c:2228:ptlrpc_server_handle_request()) Handling RPC req@ffff886d97baf180 pname:cluuid+ref:pid:xid:nid:opc:job mdt00_008:fd032a03-ac98-3bd0-9cda-ed98f0173f88+12716:20834:x1663761626790848:12345-192.168.103.15@tcp:101:truncate.0
      00010000:00010000:1.0:1586690876.387331:0:13960:0:(ldlm_lockd.c:1186:ldlm_handle_enqueue0()) ### server-side enqueue handler START
      00010000:00010000:1.0:1586690876.387333:0:13960:0:(ldlm_lockd.c:1229:ldlm_handle_enqueue0()) @@@ found existing lock cookie 0x9f8ceb1ed5a613fb  req@ffff886d97baf180 x1663761626790848/t0(0) o101->fd032a03-ac98-3bd0-9cda-ed98f0173f88@192.168.103.15@tcp:254/0 lens 480/0 e 0 to 0 dl 1586690889 ref 1 fl Interpret:/2/ffffffff rc 0/-1 job:'truncate.0'
      00000004:00010000:1.0:1586690876.387353:0:13960:0:(mdt_handler.c:3879:mdt_intent_fixup_resent()) ### Restoring lock cookie ns: mdt-lustre-MDT0000_UUID lock: ffff886d74800240/0x9f8ceb1ed5a613fb lrc: 3/0,0 mode: PW/PW res: [0x200000404:0x16ae6:0x0].0x0 bits 0x40/0x0 rrc: 6 type: IBT flags: 0x40200000000000 nid: 192.168.103.15@tcp remote: 0x806313bfb96a7bd expref: 12716 pid: 13961 timeout: 0 lvb_type: 0
      00000004:00010000:1.0:1586690876.387357:0:13960:0:(mdt_handler.c:3881:mdt_intent_fixup_resent()) @@@ restoring lock cookie 0x9f8ceb1ed5a613fb  req@ffff886d97baf180 x1663761626790848/t0(0) o101->fd032a03-ac98-3bd0-9cda-ed98f0173f88@192.168.103.15@tcp:254/0 lens 480/0 e 0 to 0 dl 1586690889 ref 1 fl Interpret:/2/ffffffff rc 0/-1 job:'truncate.0'
      00000004:00040000:1.0:1586690876.387385:0:13960:0:(mdt_handler.c:3650:mdt_lock_handle_fini()) ASSERTION( !lustre_handle_is_used(&lh->mlh_reg_lh) ) failed:
      00000004:00040000:1.0:1586690876.387395:0:13960:0:(mdt_handler.c:3650:mdt_lock_handle_fini()) LBUG
      
       #5 [ffff886db2d3bb10] mdt_thread_info_fini at ffffffffc1443206 [mdt]
          ffff886db2d3bb18: [ffff886e2ab5d000:kmalloc-4096] 00000000fffffffe
          ffff886db2d3bb28: ffff886e352ac510 ffff886db2d3bb70
          ffff886db2d3bb38: mdt_intent_policy+218
      
      crash> p (int)0xfffffffe
      $7 = -2 // ENOENT
      

            askulysh Andriy Skulysh
            askulysh Andriy Skulysh
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: